[package]
name = "dailymotion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.3.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.91"
url = "2.3.1"
